# lesl

./: .gitignore  CMakeLists.txt  Justfile  a.spv  a.spvasm  guh.glsl  guh.spv  guh.spvasm  project.dot
common/include/: spirv_binary_container.hpp
common/src/: log.cpp
doc/: GRAMMAR.md
examples/: CMakeLists.txt
examples/assets/pbr/: sphere.glb
examples/sdl3/: common.cpp  common.hpp  cube.cpp  if.cpp  matrices.cpp  multipipeline.cpp  outline.cpp  pbr.cpp  swizzles.cpp  texture.cpp  time.cpp  triangle.cpp
examples/shaders/lesl/: basic.lesl  cube.lesl  empty.lesl  if.lesl  manifest.lesl  matrices.lesl  multipipeline.lesl  outline.lesl  pbr_gbuffer.lesl  pbr_lighting.lesl  simple.lesl  swizzles.lesl  texture.lesl  time.lesl  triangle.lesl
examples/shaders/spirv/: unified_basic.spvasm
include/: log.hpp
lesl/: CMakeLists.txt
lesl/include/: arena.hpp  binding_manager.hpp  builtin_functions.hpp  codegen.hpp  codegen_helpers.hpp  lesl.hpp  repr_walker.hpp  validator.hpp
lesl/include/lesl/: arena.hpp  binding_manager.hpp  builtin_functions.hpp  codegen.hpp  codegen_helpers.hpp  colorize.hpp  error_handler.hpp  integration.hpp  lesl.hpp  parser.hpp  ref_container.hpp  repr.hpp  repr_walker.hpp  sdl.hpp  stringpool.hpp  token.hpp  tokenizer.hpp  tracking_allocator.hpp  type_info_filler.hpp  unit.hpp  utils.hpp  validator.hpp
lesl/src/: parser.cpp  sdl.cpp  stringpool.cpp
leslc/: CMakeLists.txt
leslc/include/: arena.hpp  binding_manager.hpp  builtin_functions.hpp  codegen.hpp  codegen_helpers.hpp  error_handler.hpp  parser.hpp  ref_container.hpp  repr.hpp  repr_walker.hpp  stringpool.hpp  token.hpp  tokenizer.hpp  tracking_allocator.hpp  unit.hpp  utils.hpp  validator.hpp
leslc/src/: main.cpp  parser.cpp  spvgen_demo.cpp  stringpool.cpp
shaders/: simple.frag  simple.frag.spvasm  simple.vert  simple.vert.spv  simple.vert.spvasm  x.spv  x.spvasm
src/: main.cpp
tests/: CMakeLists.txt
tests/benchmark/: main.cpp
tests/captures/: basic.cpp  capture_utils.hpp
tests/compilation/: basic.cpp  compilation_utils.hpp
tests/glslang-comparison/: glslang-comparer.cpp  if.frag  if.vert  outline.frag  outline.vert  triangle.frag  triangle.vert
tools/: lesl_repr.natvis  spv-binary-container-generator.py
